# dojora_challenges

./: .env  Cargo.toml  Dockerfile  config.toml  setup.sh  sqlx-data.json
migrations/: 20221017130812_add_table_challenge.down.sql  20221017130812_add_table_challenge.up.sql  20221024073235_add_suggestion_table.down.sql  20221024073235_add_suggestion_table.up.sql  20221203134245_add_journal_table.down.sql  20221203134245_add_journal_table.up.sql  20221204071611_Add_Metadata_To_Journal.down.sql  20221204071611_Add_Metadata_To_Journal.up.sql  20230123163627_Add_AppUser_Table.down.sql  20230123163627_Add_AppUser_Table.up.sql  20230124072204_Add_UserId_To_Journal.down.sql  20230124072204_Add_UserId_To_Journal.up.sql
migrations/2022-08-23-113840_create_challenge_table/: down.sql  up.sql
src/: .env  config.toml  lib.rs  main.rs  model.rs  result.rs  schema.rs
src/configs/: global.rs
src/controllers/: challenge_controller.rs  index.rs  mod.rs  response_helper.rs
src/domains/: challenge.rs  mod.rs  suggesstion.rs  suggestion.rs
src/events/: challenge_created.rs  event.rs  mod.rs
src/extractors/: auth_extractor.rs
src/helpers/: db_pool.rs  iterator.rs  mod.rs  query_helper.rs  string_helpers.rs
src/middlewares/: mod.rs  response_normalization.rs  validator_middleware.rs
src/misc/: time.rs
src/models/: challenge_view_model.rs  mod.rs
src/persistent/: challenge_persistent.rs  db_operations.rs  db_ping.rs  journal_persistent.rs  mod.rs  persistent_audit_metadata.rs  suggestion_persistent.rs  user_persistent.rs
src/request/: paging.rs
src/response_models/: base_response_model.rs  mod.rs  paging_model.rs
src/routes/: auth_route.rs  challenge.rs  challenge_route.rs  healthcheck_route.rs  journal_route.rs  mod.rs  route_error.rs  suggestion_route.rs
src/view_models/: challenge_view_model.rs  create_challenge_view_model.rs  mod.rs  paging_model.rs  validator.rs
tests/: health_check.rs
