[package]
name = "dojora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["v4"] }
actix-cors = "0.6.2"
diesel = { version = "2.0.0", features = [
    "postgres",
    "numeric",
    "num-integer",
    "num-bigint",
    "num-traits",
    "uuid",
] }
futures-util = "0.3.24"
