[package]
name = "dojora"
authors = ["Quack Quack <quackablequackquack@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "dojora"

[dependencies]
actix-web = "4.1.0"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.65"
uuid = { version = "1.2.1", features = ["v4"] }
actix-cors = "0.6.2"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3.24"
env_logger = "0.9.1"
sqlx = { version = "0.6.2", features = [
    "runtime-actix-rustls",
    "offline",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.13.2"
thiserror = "1.0.37"
chrono = "0.4.22"

[dev-dependencies]
claim = "*"
